--- a/exercicios/exc022/fundo002.html
+++ b/exercicios/exc022/fundo002.html
@@ -8,6 +8,10 @@
         body{
             background-image: url(imagens/pattern001.png);
             background-repeat: no-repeat;
+            background-size: cover;
+            background-repeat: repeat-x;
+            background-repeat: repeat-y;
+
         }
     </style>
 </head>
