--- a/exercicios/exc022/fundo006.html
+++ b/exercicios/exc022/fundo006.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixxo de tela</title>
     <style>
         body{
             height: 100vh;
@@ -12,6 +12,9 @@
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat cover fixed;
         }
         main{
             background-color: #fff;
@@ -27,7 +30,7 @@
     <main>
         <h1>Teste de Imagem de Fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas odit quod beatae nulla rerum id deleniti, dolorem itaque molestiae perspiciatis unde, quas ullam harum praesentium, sit aliquid soluta autem laboriosam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, laboriosam natus ea at culpa quae molestiae odio fugiat voluptate facilis quisquam accusamus. Provident, ea numquam placeat maxime cupiditate nemo et? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex dicta nostrum minima nihil reprehenderit sunt explicabo, doloribus fugiat magnam id nulla sint enim, tenetur commodi deleniti doloremque eos beatae corporis!
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod, dignissimos! Itaque, dolores at in quibusdam eligendi nesciunt natus maiores soluta iusto, sunt quo aut esse, culpa laborum. Earum provident fuga facere! Magni explicabo placeat et laudantium a cum expedita est vitae nam, adipisci accusamus veritatis provident consequatur reprehenderit ullam, inventore quisquam nihil sint, consequuntur voluptate nemo. Sed, est aliquam autem deserunt eaque nemo ad reiciendis consequuntur nam molestiae doloribus dolores quibusdam numquam, earum repudiandae nulla officia voluptates dolore laudantium qui ipsum. Exercitationem voluptatibus tempora est veritatis asperiores rerum eum laudantium beatae. Quam ipsum harum saepe amet soluta fuga aliquid eos! Lorem ipsum dolor sit amet consectetur, adipisicing elit. In vitae provident ad ullam quas mollitia quaerat id nulla! Voluptatibus debitis aut enim ipsam sint minima aspernatur incidunt ea itaque iusto rerum pariatur corporis reiciendis, doloribus quia blanditiis cum architecto nulla nostrum commodi. Ut aliquam vel nesciunt soluta accusantium a repellat natus fuga nihil expedita perferendis voluptas corrupti temporibus quod tempora, quia ipsa facilis eaque doloremque atque molestias error minus sapiente. Ex inventore voluptate doloribus beatae, optio praesentium odio asperiores numquam rem. Sapiente aspernatur, sequi quia ipsa totam repudiandae, accusantium odio laboriosam ex commodi eaque dicta unde ad, saepe at dolorum.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod, dignissimos! Itaque, dolores at in quibusdam eligendi nesciunt natus maiores soluta iusto, sunt quo aut esse, culpa laborum. Earum provident fuga facere! Magni explicabo placeat et laudantium a cum expedita est vitae nam, adipisci accusamus veritatis provident consequatur reprehenderit ullam, inventore quisquam nihil sint, consequuntur voluptate nemo. Sed, est aliquam autem deserunt eaque nemo ad reiciendis consequuntur nam molestiae doloribus dolores quibusdam numquam, earum repudiandae nulla officia voluptates dolore laudantium qui ipsum. Exercitationem voluptatibus tempora est veritatis asperiores rerum eum laudantium beatae. Quam ipsum harum saepe amet soluta fuga aliquid eos! Lorem ipsum dolor sit amet consectetur, adipisicing elit. In vitae provident ad ullam quas mollitia quaerat id nulla! Voluptatibus debitis aut enim ipsam sint minima aspernatur incidunt ea itaque iusto rerum pariatur corporis reiciendis, doloribus quia blanditiis cum architecto nulla nostrum commodi. Ut aliquam vel nesciunt soluta accusantium a repellat natus fuga nihil expedita perferendis voluptas corrupti temporibus quod tempora, quia ipsa facilis eaque doloremque atque molestias error minus sapiente. Ex inventore voluptate doloribus beatae, optio praesentium odio asperiores numquam rem. Sapiente aspernatur, sequi quia ipsa totam repudiandae, accusantium odio laboriosam ex commodi eaque dicta unde ad, saepe at dolorum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti nostrum aliquid molestiae impedit nam natus nemo quo sequi velit, quia laudantium optio aspernatur ratione quos. Voluptatem excepturi magni quisquam aspernatur. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis recusandae beatae maiores, sunt fuga aut nobis sequi expedita eligendi repellat quibusdam, voluptatibus porro iusto! Debitis repudiandae excepturi officia minus laborum, aliquid dolorem minima sint enim quod fugit autem ea ab accusantium vel repellendus nostrum nobis adipisci harum voluptas? Nihil, beatae.
         </p>
     </main>
 </body>
