--- a/desefios/modulo3/d012/index.html
+++ b/desefios/modulo3/d012/index.html
@@ -97,7 +97,7 @@
 
    
     <footer>
-        <p>Site criado por <a href="" target="_blank">Elcapa</a> para <a href="" target="_blank">curso em video</a></p>
+        <p>Site criado por <a href="https://github.com/" target="_blank">Elcapa</a> para <a href="https://www.cursoemvideo.com/" target="_blank">curso em video</a></p>
     </footer>
 </body>
 </html>
